--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>Pardo Barangay Hall - Police Station</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="css/modern.css" rel="stylesheet">
 	<link href="css/creative.css" rel="stylesheet">
 </head>
