--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="fill" style="background-image:url('img/IMG_7795.jpg');"></div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('img/IMG_7791.jpg');"></div>
+                <div class="fill" style="background-image:url('img/IMG7791.jpg');"></div>
             </div>
             <div class="item">
                 <div class="fill" style="background-image:url('img/IMG_7797.jpg');"></div>
