--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div class="container colorbody">
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive" src="img/IMG_7794.jpg" height="450px" width="750px" alt="">
+                <img class="img-responsive" src="img/img7794.jpg" height="450px" width="750px" alt="">
             </div>
             <div class="col-md-6">
                 <h2>Pardo Barangay Hall - Police Station</h2>
