--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="fill" style="background-image:url('img/IMG_7795.JPG);"></div>
+                <div class="fill" style="background-image:url('img/IMG_7795.JPG');"></div>
             </div>
             <div class="item">
                 <div class="fill" style="background-image:url('img/IMG_7791.JPG');"></div>
