--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>Pardo Barangay Hall - Police Station</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="css/modern.css" rel="stylesheet">
 	<link href="css/creative.css" rel="stylesheet">
 </head>
@@ -23,7 +23,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Home</a>
+            <a class="navbar-brand fa fa-2x fa-home" href="index.html"></a>
         </div>
          <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -52,13 +52,13 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="fill" style="background-image:url('img/IMG_7795.JPG');"></div>
+                <div class="fill" style="background-image:url('img/IMG_7795.jpg');"></div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('img/IMG_7791.JPG');"></div>
+                <div class="fill" style="background-image:url('img/IMG_7791.jpg');"></div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('img/IMG_7797.JPG');"></div>
+                <div class="fill" style="background-image:url('img/IMG_7797.jpg');"></div>
             </div>
         </div>
 
@@ -74,7 +74,7 @@
 <div class="container colorbody">
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive" src="img/IMG_7794.JPG" height="450px" width="750px" alt="">
+                <img class="img-responsive" src="img/IMG_7794.jpg" height="450px" width="750px" alt="">
             </div>
             <div class="col-md-6">
                 <h2>Pardo Barangay Hall - Police Station</h2>
@@ -106,9 +106,96 @@
    </div>
    
    </div>
-   
+  
+   <hr>
    	<!-- Organizational Chart -->
-	<img class="img-responsive" src="img/pardochart.jpg">
+	<section id="orgchart">
+	<div class="row">
+                <div class="col-lg-12 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="profileimage sr-icons">
+						<img src="http://www.billboard.com/images/pref_images/q37000tpld3.jpg">
+						</i>
+                        <h4>P/Sr. Insp. Homobuno R. Sayson</h4>
+                        <p class="text-muted">Head</p>
+                    </div>
+                </div>
+	</div>
+		<div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="profileimage sr-icons">
+						<img src="http://www.billboard.com/images/pref_images/q55963rka7z.jpg">
+						</i>
+                        <h4>Put name here</h4>
+                        <p class="text-muted">Rank / Description / Text</p>
+                    </div>
+                </div>
+				                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="profileimage sr-icons">
+						<img src="http://www.billboard.com/images/pref_images/q48642a2jvd.jpg">
+						</i>
+                        <h4>Put name here</h4>
+                        <p class="text-muted">Rank / Description / Text</p>
+                    </div>
+                </div>
+				                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="profileimage sr-icons">
+						<img src="http://www.billboard.com/images/pref_images/q55103nkulw.jpg">
+						</i>
+                        <h4>Put name here</h4>
+                        <p class="text-muted">Rank / Description / Text</p>
+                    </div>
+                </div>
+				                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="profileimage sr-icons">
+						<img src="http://www.billboard.com/images/pref_images/q42396myajr.jpg">
+						</i>
+                        <h4>Put name here</h4>
+                        <p class="text-muted">Rank / Description / Text</p>
+                    </div>
+                </div>
+								                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="profileimage sr-icons">
+						<img src="http://www.billboard.com/images/pref_images/q43730mhaxa.jpg">
+						</i>
+                        <h4>Put name here</h4>
+                        <p class="text-muted">Rank / Description / Text</p>
+                    </div>
+                </div>
+								                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="profileimage sr-icons">
+						<img src="http://www.billboard.com/images/pref_images/q52485p3ge2.jpg">
+						</i>
+                        <h4>Put name here</h4>
+                        <p class="text-muted">Rank / Description / Text</p>
+                    </div>
+                </div>
+								                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="profileimage sr-icons">
+						<img src="http://www.billboard.com/images/pref_images/q48490xuiyq.jpg">
+						</i>
+                        <h4>Put name here</h4>
+                        <p class="text-muted">Rank / Description / Text</p>
+                    </div>
+                </div>
+								                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="profileimage sr-icons">
+						<img src="http://www.billboard.com/images/pref_images/q57043or8qy.jpg">
+						</i>
+                        <h4>Put name here</h4>
+                        <p class="text-muted">Rank / Description / Text</p>
+                    </div>
+                </div>				
+	</div>
+	</section>
 	
 <section id="services">
             <div class="row">
@@ -166,12 +253,36 @@
                 </div>
             </div>
     </section>
+	<!-- Back To Top> delete this if ganahan i enabled
+	<a href="#" class="scrollToTop"><i class="fa fa-3x fa-arrow-circle-up" title="Go To Top"></i></a> 
+	--> 
+
 </div>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <script src="js/scrollreveal.min.js"></script>
 <script src="js/creative.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
 	
+	//Check to see if the window is top if not then display button
+	$(window).scroll(function(){
+		if ($(this).scrollTop() > 300) {
+			$('.scrollToTop').fadeIn();
+		} else {
+			$('.scrollToTop').fadeOut();
+		}
+	});
+	
+	//Click event to scroll to top
+	$('.scrollToTop').click(function(){
+		$('html, body').animate({scrollTop : 0},800);
+		return false;
+	});
+	
+});			
+</script>
+
 </body>
 </html>
