--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="fill" style="background-image:url('img/IMG_7795.jpg');"></div>
+                <div class="fill" style="background-image:url('img/IMG_7795.JPG');"></div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('img/IMG_7791.jpg');"></div>
+                <div class="fill" style="background-image:url('img/IMG_7791.JPG');"></div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('img/IMG_7797.jpg');"></div>
+                <div class="fill" style="background-image:url('img/IMG_7797.JPG');"></div>
             </div>
         </div>
 
@@ -74,7 +74,7 @@
 <div class="container colorbody">
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive" src="img/IMG_7794.jpg" height="450px" width="750px" alt="">
+                <img class="img-responsive" src="img/IMG_7794.JPG" height="450px" width="750px" alt="">
             </div>
             <div class="col-md-6">
                 <h2>Pardo Barangay Hall - Police Station</h2>
