--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="fill" style="background-image:url('img/IMG_7795.JPG');"></div>
+                <div class="fill" style="background-image:url('img/IMG_78602.JPG'); background-size: 100% 150%; background-position: 50% 55%;"></div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('img/IMG_7791.JPG');"></div>
+                <div class="fill" style="background-image:url('img/IMG_78662.JPG'); background-size: 100% 130%;"></div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('img/IMG_7797.JPG');"></div>
+                <div class="fill" style="background-image:url('img/IMG_78682.JPG'); background-size: 100% 130%; "></div>
             </div>
         </div>
 
@@ -74,7 +74,7 @@
 <div class="container colorbody">
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive" src="img/IMG_7794.JPG" height="450px" width="750px" alt="">
+                <img class="img-responsive" src="img/IMG_78632.JPG" height="450px" width="750px" alt="">
             </div>
             <div class="col-md-6">
                 <h2>Pardo Barangay Hall - Police Station</h2>
@@ -84,6 +84,7 @@
             </div>
 			</div>
 			<hr>
+			<div id="content">
 <ul id = "myTab" class = "nav nav-tabs">
    <li class = "active">
       <a class="fa fa-3x fa-eye sr-icons" href = "#vision" data-toggle = "tab"> Vision</a>
@@ -106,94 +107,147 @@
    </div>
    
    </div>
-  
-   <hr>
+   </div>
+   	<section id="orgchart">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Organizational Chart</h2>
+                    <hr class="light">
+                    </div>
+            </div>
    	<!-- Organizational Chart -->
-	<section id="orgchart">
 	<div class="row">
-                <div class="col-lg-12 col-md-6 text-center">
+                <div class="col-lg-12 col-md-6 text-center padbottom">
                     <div class="service-box">
                         <i class="profileimage sr-icons">
-						<img src="http://www.billboard.com/images/pref_images/q37000tpld3.jpg">
+						<img src="img/people/q37000tpld3.jpg">
 						</i>
-                        <h4>P/Sr. Insp. Homobuno R. Sayson</h4>
-                        <p class="text-muted">Head</p>
+                        <h4>PCINSP Michelangelo S. Beltran</h4>
+                        <p class="text-muted">Chief of Police</p>
                     </div>
                 </div>
 	</div>
+	<div class="row">
+	                <div class="col-lg-6 col-md-6 text-center padbottom">
+                    <div class="service-box">
+                        <i class="profileimage sr-icons">
+						<img src="img/people/q55963rka7z.jpg">
+						</i>
+                        <h4>PINSP Franklin Lasala Tale Jr.</h4>
+                        <p class="text-muted">Deputy Chief for Admin</p>
+                    </div>
+                </div>
+				   <div class="col-lg-6 col-md-6 text-center padbottom">
+                    <div class="service-box">
+                        <i class="profileimage sr-icons">
+						<img src="img/people/q48642a2jvd.jpg">
+						</i>
+                        <h4>PINSP Allan Devilleres Soroño</h4>
+                        <p class="text-muted">Deputy Chief for Operation</p>
+                    </div>
+                </div>
+        </div>
+
 		<div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
+				                <div class="col-lg-3 col-md-6 text-center padbottom">
                     <div class="service-box">
                         <i class="profileimage sr-icons">
-						<img src="http://www.billboard.com/images/pref_images/q55963rka7z.jpg">
+						<img src="img/people/q55103nkulw.jpg">
 						</i>
-                        <h4>Put name here</h4>
-                        <p class="text-muted">Rank / Description / Text</p>
+                        <h4>SPO2 Miguel R. Enriquez</h4>
+                        <p class="text-muted">Admin PNCO</p>
                     </div>
                 </div>
-				                <div class="col-lg-3 col-md-6 text-center">
+				                <div class="col-lg-3 col-md-6 text-center padbottom">
                     <div class="service-box">
                         <i class="profileimage sr-icons">
-						<img src="http://www.billboard.com/images/pref_images/q48642a2jvd.jpg">
+						<img src="img/people/q42396myajr.jpg">
 						</i>
-                        <h4>Put name here</h4>
-                        <p class="text-muted">Rank / Description / Text</p>
+                        <h4>PO3 Raymond C. Mayormita</h4>
+                        <p class="text-muted">Finance / Supply PNCO</p>
                     </div>
                 </div>
-				                <div class="col-lg-3 col-md-6 text-center">
+								                <div class="col-lg-3 col-md-6 text-center padbottom">
                     <div class="service-box">
                         <i class="profileimage sr-icons">
-						<img src="http://www.billboard.com/images/pref_images/q55103nkulw.jpg">
+						<img src="img/people/q43730mhaxa.jpg">
 						</i>
-                        <h4>Put name here</h4>
-                        <p class="text-muted">Rank / Description / Text</p>
+                        <h4>PO3 Roderick A. Francia</h4>
+                        <p class="text-muted">Police Community Relation PNCO</p>
                     </div>
                 </div>
-				                <div class="col-lg-3 col-md-6 text-center">
+								                <div class="col-lg-3 col-md-6 text-center padbottom">
                     <div class="service-box">
                         <i class="profileimage sr-icons">
-						<img src="http://www.billboard.com/images/pref_images/q42396myajr.jpg">
+						<img src="img/people/q52485p3ge2.jpg">
 						</i>
-                        <h4>Put name here</h4>
-                        <p class="text-muted">Rank / Description / Text</p>
+                        <h4>PO3 Crisostomo T. Bayato Jr.</h4>
+                        <p class="text-muted">Intelligence PNCO</p>
                     </div>
                 </div>
-								                <div class="col-lg-3 col-md-6 text-center">
+								                <div class="col-lg-3 col-md-6 text-center padbottom">
                     <div class="service-box">
                         <i class="profileimage sr-icons">
-						<img src="http://www.billboard.com/images/pref_images/q43730mhaxa.jpg">
+						<img src="img/people/q48490xuiyq.jpg">
 						</i>
-                        <h4>Put name here</h4>
-                        <p class="text-muted">Rank / Description / Text</p>
+                        <h4>PO2 GalilAiza L. Nacario</h4>
+                        <p class="text-muted">Womens and Childrens Protection PNCO</p>
                     </div>
                 </div>
-								                <div class="col-lg-3 col-md-6 text-center">
+								                <div class="col-lg-3 col-md-6 text-center padbottom">
                     <div class="service-box">
                         <i class="profileimage sr-icons">
-						<img src="http://www.billboard.com/images/pref_images/q52485p3ge2.jpg">
+						<img src="img/people/q57043or8qy.jpg">
 						</i>
-                        <h4>Put name here</h4>
-                        <p class="text-muted">Rank / Description / Text</p>
-                    </div>
-                </div>
-								                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="profileimage sr-icons">
-						<img src="http://www.billboard.com/images/pref_images/q48490xuiyq.jpg">
-						</i>
-                        <h4>Put name here</h4>
-                        <p class="text-muted">Rank / Description / Text</p>
+                        <h4>PO1 Honeylyn Joy D. Inoferio</h4>
+                        <p class="text-muted">Operation PNCO</p>
                     </div>
                 </div>
 								                <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="profileimage sr-icons">
-						<img src="http://www.billboard.com/images/pref_images/q57043or8qy.jpg">
+						<img src="img/people/q34327sud67.jpg">
 						</i>
-                        <h4>Put name here</h4>
-                        <p class="text-muted">Rank / Description / Text</p>
+                        <h4>PO1 Teonney A. Gidor</h4>
+                        <p class="text-muted">PSG Action PNCO</p>
                     </div>
-                </div>				
+                </div>		
+								                <div class="col-lg-3 col-md-6 text-center padbottom">
+                    <div class="service-box">
+                        <i class="profileimage sr-icons">
+						<img src="img/people/q53087oyope.jpg">
+						</i>
+                        <h4>SPO4 Jelson A. Solibio</h4>
+                        <p class="text-muted">Chief Investigator</p>
+                    </div>
+                </div>		
+								                <div class="col-lg-3 col-md-6 text-center padbottom">
+                    <div class="service-box">
+                        <i class="profileimage sr-icons">
+						<img src="img/people/q49904uewfk.jpg">
+						</i>
+                        <h4>PO1 Ryan A. Panugaling</h4>
+                        <p class="text-muted">Warrant and Subpeon PNCO</p>
+                    </div>
+                </div>		
+								                <div class="col-lg-3 col-md-6 text-center padbottom">
+                    <div class="service-box">
+                        <i class="profileimage sr-icons">
+						<img src="img/people/q47897xai2w.jpg">
+						</i>
+                        <h4>SPO1 Vicente R. Espenido Jr.</h4>
+                        <p class="text-muted">Tm Leader First Responder - Team A</p>
+                    </div>
+                </div>		
+								                <div class="col-lg-3 col-md-6 text-center padbottom">
+                    <div class="service-box">
+                        <i class="profileimage sr-icons">
+						<img src="img/people/q46483ubdhf.jpg">
+						</i>
+                        <h4>SPO2 Joel L. Lacson</h4>
+                        <p class="text-muted">Tm Leader First Responder - Team B</p>
+                    </div>
+                </div>						
 	</div>
 	</section>
 	
@@ -253,9 +307,9 @@
                 </div>
             </div>
     </section>
-
+	<!-- Back To Top> delete this if ganahan i enabled
 	<a href="#" class="scrollToTop"><i class="fa fa-3x fa-arrow-circle-up" title="Go To Top"></i></a> 
-
+	--> 
 
 </div>
 	<script src="js/jquery.min.js"></script>
