--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="fill" style="background-image:url('img/IMG_78602.JPG'); background-size: 100% 150%; background-position: 50% 55%;"></div>
+                <div class="fill" style="background-image:url('img/IMG_78602.jpg'); background-size: 100% 150%; background-position: 50% 55%;"></div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('img/IMG_78662.JPG'); background-size: 100% 130%;"></div>
+                <div class="fill" style="background-image:url('img/IMG_78662.jpg'); background-size: 100% 130%;"></div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('img/IMG_78682.JPG'); background-size: 100% 130%; "></div>
+                <div class="fill" style="background-image:url('img/IMG_78682.jpg'); background-size: 100% 130%; "></div>
             </div>
         </div>
 
@@ -74,7 +74,7 @@
 <div class="container colorbody">
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive" src="img/IMG_78632.JPG" height="450px" width="750px" alt="">
+                <img class="img-responsive" src="img/IMG_78632.jpg" height="450px" width="750px" alt="">
             </div>
             <div class="col-md-6">
                 <h2>Pardo Barangay Hall - Police Station</h2>
